FIX: weird random color and weird contrasts

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,5 +4,5 @@ html, body {
 }
 
 input[type=text]::placeholder {
-  color: #9E9E9E;
+  color: white;
 }
